[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/UI/rule_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/BWTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/ATARCE__.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ARARCE__Med.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/UI/opponent_select_button.gd" type="Script" id=5]
[ext_resource path="res://assets/ATARCE__MenuButton.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
size = 56
outline_size = 20
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = -5
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 34
extra_spacing_char = -3
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="RuleMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -360.0
margin_right = 540.0
margin_bottom = 360.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -487.0
margin_top = -300.0
margin_right = 487.0
margin_bottom = 300.0
border_color = Color( 1, 1, 1, 1 )
border_width = 2.0
editor_only = false

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -130.0
margin_top = 48.0
margin_right = 130.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
text = "Rules"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -207.5
margin_right = 250.0
margin_bottom = 207.5
rect_min_size = Vector2( 474, 400 )

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 474.0
margin_bottom = 694.0
custom_constants/separation = 10

[node name="GridContainer6" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 474.0
margin_bottom = 40.0
custom_constants/hseparation = 115
columns = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer6"]
margin_top = 8.0
margin_right = 157.0
margin_bottom = 32.0
rect_min_size = Vector2( 157, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Versus"

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer/GridContainer6"]
margin_left = 272.0
margin_right = 472.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 6 )
toggle_mode = true
text = "Computer"
script = ExtResource( 5 )

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 474.0
margin_bottom = 74.0
columns = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_right = 350.0
margin_bottom = 24.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Target Score"

[node name="TargetScoreSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridContainer"]
margin_left = 354.0
margin_right = 474.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
min_value = 1.0
max_value = 99999.0
value = 1.0
rounded = true
align = 1

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 474.0
margin_bottom = 94.0
custom_constants/separation = 10

[node name="StageHeading" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 474.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 2 )
text = "Stage"

[node name="GridContainer2" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 474.0
margin_bottom = 229.0
columns = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer2"]
margin_right = 350.0
margin_bottom = 24.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Rotation Speed"

[node name="RotationSpeedSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridContainer2"]
margin_left = 354.0
margin_right = 474.0
margin_bottom = 24.0
max_value = 40.0
step = 0.5
value = 1.5
align = 1

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer2"]
margin_top = 28.0
margin_right = 350.0
margin_bottom = 52.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Min Flip Time"

[node name="MinFlipTimeSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridContainer2"]
margin_left = 354.0
margin_top = 28.0
margin_right = 474.0
margin_bottom = 52.0
step = 0.1
value = 1.5
align = 1

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer2"]
margin_top = 56.0
margin_right = 350.0
margin_bottom = 80.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Max Flip Time"

[node name="MaxFlipTimeSpinbox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridContainer2"]
margin_left = 354.0
margin_top = 56.0
margin_right = 474.0
margin_bottom = 80.0
rect_min_size = Vector2( 120, 0 )
step = 0.1
value = 1.5
align = 1

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
margin_top = 239.0
margin_right = 474.0
margin_bottom = 249.0
custom_constants/separation = 10

[node name="BallHeading" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 259.0
margin_right = 474.0
margin_bottom = 294.0
custom_fonts/font = SubResource( 2 )
text = "Ball"

[node name="GridContainer3" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 474.0
margin_bottom = 356.0
columns = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer3"]
margin_right = 350.0
margin_bottom = 24.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Speed"

[node name="SpeedSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridContainer3"]
margin_left = 354.0
margin_right = 474.0
margin_bottom = 24.0
min_value = 200.0
max_value = 600.0
step = 10.0
value = 200.0
align = 1

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer3"]
margin_top = 28.0
margin_right = 350.0
margin_bottom = 52.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Acceleration"

[node name="AccelerationSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridContainer3"]
margin_left = 354.0
margin_top = 28.0
margin_right = 474.0
margin_bottom = 52.0
rect_min_size = Vector2( 120, 0 )
step = 0.5
value = 1.5
align = 1

[node name="HSeparator4" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 474.0
margin_bottom = 376.0
custom_constants/separation = 10

[node name="PaddleHeading" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 386.0
margin_right = 474.0
margin_bottom = 421.0
custom_fonts/font = SubResource( 2 )
text = "Paddle"

[node name="GridContainer4" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 431.0
margin_right = 474.0
margin_bottom = 455.0
columns = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer4"]
margin_right = 350.0
margin_bottom = 24.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Speed"

[node name="PaddleSpeedSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridContainer4"]
margin_left = 354.0
margin_right = 474.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
min_value = 200.0
max_value = 600.0
step = 10.0
value = 350.0
align = 1

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
margin_top = 465.0
margin_right = 474.0
margin_bottom = 475.0
custom_constants/separation = 10

[node name="ItemsHeading" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_top = 485.0
margin_right = 474.0
margin_bottom = 520.0
custom_fonts/font = SubResource( 2 )
text = "Items"

[node name="GridContainer5" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 530.0
margin_right = 474.0
margin_bottom = 694.0
columns = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer5"]
margin_right = 350.0
margin_bottom = 24.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Cap"

[node name="CapSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridContainer5"]
margin_left = 354.0
margin_right = 474.0
margin_bottom = 24.0
max_value = 12.0
value = 3.0
rounded = true
align = 1

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer5"]
margin_top = 28.0
margin_right = 350.0
margin_bottom = 52.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Min Spawn Time"

[node name="MinSpawnTimeSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridContainer5"]
margin_left = 354.0
margin_top = 28.0
margin_right = 474.0
margin_bottom = 52.0
min_value = 0.1
step = 0.1
value = 1.5
align = 1

[node name="Label4" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer5"]
margin_top = 56.0
margin_right = 350.0
margin_bottom = 80.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Max Spawn Time"

[node name="MaxSpawnTimeSpinbox" type="SpinBox" parent="ScrollContainer/VBoxContainer/GridContainer5"]
margin_left = 354.0
margin_top = 56.0
margin_right = 474.0
margin_bottom = 80.0
min_value = 0.1
step = 0.1
value = 1.5
align = 1

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/GridContainer5"]
margin_top = 112.0
margin_right = 350.0
margin_bottom = 136.0
rect_min_size = Vector2( 350, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Types"

[node name="HBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/GridContainer5"]
margin_left = 354.0
margin_top = 84.0
margin_right = 474.0
margin_bottom = 164.0

[node name="BoostCheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer5/HBoxContainer"]
margin_right = 120.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
pressed = true
text = "Boost"

[node name="FlashCheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer5/HBoxContainer"]
margin_top = 28.0
margin_right = 120.0
margin_bottom = 52.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
pressed = true
text = "Flash"

[node name="MultiCheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/GridContainer5/HBoxContainer"]
margin_top = 56.0
margin_right = 120.0
margin_bottom = 80.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/hover_pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
pressed = true
text = "Multi"

[node name="SaveButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -215.0
margin_top = -132.0
margin_right = -74.0
margin_bottom = -79.0
text = "Save"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/GridContainer6/Button" to="ScrollContainer/VBoxContainer/GridContainer6/Button" method="_on_Button_pressed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridContainer/TargetScoreSpinBox" to="." method="_on_TargetScoreSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridContainer2/RotationSpeedSpinBox" to="." method="_on_RotationSpeedSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridContainer2/MinFlipTimeSpinBox" to="." method="_on_MinFlipTimeSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridContainer2/MaxFlipTimeSpinbox" to="." method="_on_MaxFlipTimeSpinbox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridContainer3/SpeedSpinBox" to="." method="_on_SpeedSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridContainer3/AccelerationSpinBox" to="." method="_on_AccelerationSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridContainer4/PaddleSpeedSpinBox" to="." method="_on_PaddleSpeedSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridContainer5/CapSpinBox" to="." method="_on_CapSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridContainer5/MinSpawnTimeSpinBox" to="." method="_on_MinSpawnTimeSpinBox_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/GridContainer5/MaxSpawnTimeSpinbox" to="." method="_on_MaxSpawnTimeSpinbox_value_changed"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/GridContainer5/HBoxContainer/BoostCheckBox" to="." method="_on_BoostCheckBox_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/GridContainer5/HBoxContainer/FlashCheckBox" to="." method="_on_FlashCheckBox_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/GridContainer5/HBoxContainer/MultiCheckBox" to="." method="_on_MultiCheckBox_toggled"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
